--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #00091d;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
